--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
-		"esbuild": "0.17.3",
+		"esbuild": "^0.25.11",
 		"obsidian": "latest",
+		"obsidian-typings": "^3.13.2",
 		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+		"typescript": "latest"
 	},
 	"dependencies": {
 		"install": "^0.13.0",
