--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
-		"@types/node": "^16.11.6",
+		"@types/node": "latest",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
 		"esbuild": "^0.25.11",
 		"obsidian": "latest",
-		"obsidian-typings": "^3.13.2",
-		"tslib": "2.4.0",
+		"obsidian-typings": "latest",
+		"tslib": "latest",
 		"typescript": "latest"
 	},
 	"dependencies": {
