--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,10 @@
       "ES5",
       "ES6",
       "ES7"
-    ]
+    ],
+	"types": [
+		"obsidian-dataview"
+	]
   },
   "include": [
     "**/*.ts"
